# retaugen

./: .gitignore  README.md  package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: ann.rs  app.rs  docs.rs  embed.rs  gen.rs  layout.rs  lib.rs  main.rs  stella.rs  store.rs  utils.rs
src-tauri/src/sampler/: mod.rs
src/routes/: +page.svelte  Search.svelte  Thumb.svelte  types.ts
test-data/: wiki-x-small.json
