[package]
name = "retaugen"
version = "0.1.0"
description = "A Tauri App"
authors = ["Anubhab"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "retaugen_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
anyhow              = "1"
bincode             = "1"
bm25                = { version = "0", features = ["parallelism"] }
candle-core         = { git = "https://github.com/huggingface/candle.git", version = "0", features = ["metal"] }
candle-nn           = { git = "https://github.com/huggingface/candle.git", version = "0", features = ["metal"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0", features = ["metal"] }
dashmap             = { version = "6", features = ["rayon"] }
image               = { version = "0", default-features = false, features = ["rayon", "jpeg"] }
ort                 = { version = "2.0.0-rc.6" }
pdfium-render       = { version = "0" }
rand                = "0"
rayon               = "1"
tauri               = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell  = "2.0.0-rc"
text-splitter       = { version = "0", features = ["tokenizers", "markdown"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tokenizers          = "0"
tauri-plugin-fs = "2.0.0-rc.5"

